08-12-2022 - Moved the TriggerLogger logic to the TriggerLoggerTemplate
08-12-2022 - Moved API key retrieval to Secrets Manager
08-23-2022 - Support for stand-alone EMR clusters without EKS
08-31-2022 - Fixed issues with the Dataset Status objects being returned from the REST API
09-23-2022 - Fixed issues with the AWS Marketplace Metering API calls

v2.2.5
11-09-2022 - Fixed DynamobDb eventual consistency upon reading Trigger configurations

v2.3.0
12-20-2022 - Major refactoring of the IData pipeline-core Github project (private) into this pipeline-server (open-source) project, removed spark (EMR, EKS on EMR) dependencies
12-20-2022 - Refactored to leverage Athena for parquet generation for more efficiency
12-21-2022 - Refactored the dataset configuration logic
01-04-2023 - Added 'Lakehouse' object store support using Athena with Apache Iceberg integration (https://iceberg.apache.org/)
01-31-2023 - Refactored data quality, deduplication and row level data transformations (javascript)

v2.3.2
05-18-2023 - Bug fix - dataset status UI REST API was not reporting the proper status for some ingestion types

v2.3.3
05-22-2023 - Bug fix - Fixed a UI status issue for errors in the dataset run
06-30-2023 - Moved the test files and test javascript samples to ./test-scripts
08-09-2023 - New feature - Added a database source for pulling data from Postgres based upon a dataset configuration cron value into the pipeline
08-10-2023 - Added support for pulling data from Microsoft SQL Server
08-11-2023 - Added support for pulling data from MySQL

v2.3.4
02-21-2024 - Changed the header on all files with 2024 as the copyright year
02-21-2024 - Added Change Data Capture (CDC) database support using Kafka (AWS MSK) and Debezium Connectors
02-28-2024 - Moved to a multi-module project and started to integrate Spark transformation ingestion code as an alternative to Athena ingestion